    - check return of write() a gcc recommends
  * apt-inst/deb/debfile.cc:
    - check return of chdir() as gcc recommends
  * apt-inst/deb/dpkgdb.cc:
    - check return of chdir() as gcc recommends
  * methods/makefile:
    - do not link rred against libz anymore as FileFd handles all
      this transparently now
  * debian/control:
    - bump Standards-Version to 3.9.3 (no changes needed)
  * doc/apt-get.8.xml:
    - typofix: respect → respecting, thanks Mike Erickson! (Closes: #664833)
  * debian/rules:
    - do not sed in configure.in to set the version-number
  * prepare-release:
    - add as a small script to lazy check and prepare releases
  * doc/*:
    - move the command synopsis out of each manpage into apt-verbatim.ent
      as they are a hell to translate and just single out the parameters
      which can be translated to apt.ent
  * apt-pkg/aptconfiguration.cc:
    - if present, prefer xz binary over lzma
    - if we have zlib builtin insert add a dummy gzip compressor for FileFD
  * methods/bzip2.cc:
    - remove it as the functionality for all compressors can be
      provided by gzip.cc now with the usage of FileFD

  [ Bogdan Purcareata ]
  * doc/apt-get.8.xml:
    - add 'download' to the usage line (Closes: #649340)
  * cmdline/apt-get.cc:
    - distinguish information about 'apt-get autoremove' based on the
      number of auto-removed packages both before and after the list
      of packages (Closes: #665833)

 -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 05 Apr 2012 19:00:43 +0200

apt (0.8.16~exp13) experimental; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/acquire-item.cc:
    - remove 'old' InRelease file if we can't get a new one before
      proceeding with Release.gpg to avoid the false impression of a still
      trusted repository by a (still present) old InRelease file.
      Thanks to Simon Ruderich for reporting this issue! (CVE-2012-0214)
    - add Debug::pkgAcqArchive::NoQueue to disable package downloading